kubia.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whoareyou-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoareyou
  template:
    metadata:
      labels:
        app: whoareyou
    spec:
      containers:
      - name: whoareyou-container
        image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoareyou-service
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoareyou
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoareyou-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - whoareyou.k8s.theykk.net
    secretName: whoareyou-service-crt      
  rules:
  - host: whoareyou.k8s.theykk.net
    http:
      paths:
      - path: /
        backend:
          serviceName: whoareyou-service
          servicePort: http
