traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - dashboard.k8s.theykk.net
    secretName: dashboard-service-crt
  rules:
  - host: dashboard.k8s.theykk.net
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard-service
          servicePort: http
